--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Barriecito|Indie+Flower&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -34,6 +35,9 @@
 		</div>
 	</div>
 
+	<div>
+		<img src="assets/images/homer.png" alt="Homer J Simpson">
+	</div>
 	<script src="assets/javascript/game.js"></script>
 </body>
 </html>
